[package]
name = "yubikey-provision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"]}
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.10", features = ["gzip", "tls", "tls-roots", "transport", "channel", "codegen"] }
clap = { version = "4.3", features = ["derive", "env"] }
toml = "0.7.6"
thiserror = "1.0.48"
dotenvy = "0.15"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"]}
chrono = "0.4"
which = "4"


[build-dependencies]
tonic-build = { version = "0.10" }
prost-build = { version = "0.12" }

[profile.release]
strip = true
opt-level = "s"
lto = true
